[package]
name = "gcu_sentinel_cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
# Framework Web y Asincronía
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logs
tracing = "0.1"
tracing-subscriber = "0.3"

# Matemáticas y Archivos (Lo que te está fallando)
ndarray = "0.15"
ndarray-npy = "0.8"

# Utilidades
chrono = "0.4"
# Es IMPORTANTE que uuid tenga la feature "v4" activada
uuid = { version = "1.0", features = ["v4"] }