[package]
name = "gcu_sentinel_cloud"
version = "0.1.0"
edition = "2024"

[dependencies]

# Servidor Web y Asincronía
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Manejo de JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Matemáticas y Archivos NPY
ndarray = "0.15"
ndarray-npy = "0.8"

# Utilidades
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"